Add possiblity to copy LDAP group

--- a/Kitodo/src/main/resources/messages/errors_de.properties
+++ b/Kitodo/src/main/resources/messages/errors_de.properties
@@ -147,6 +147,7 @@ tooManyBatchesSelected=Es sind mehrere Batches ausgew\u00E4hlt. W\u00E4hlen Sie 
 
 # U
 errorUploading=Fehler beim Hochladen von ''{0}''
+unableToDuplicateLdapGroup=Fehler: LDAP Gruppe konnte nicht dupliziert werden!
 unableToDuplicateProject=Fehler: Projekt konnte nicht dupliziert werden!
 unableToDuplicateTemplate=Fehler: Produktionsvorlage konnte nicht dupliziert werden!
 unableToDuplicateWorkflow=Fehler: Workflow konnte nicht dupliziert werden!
