--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -145,6 +145,7 @@ tooManyBatchesSelected=Multiple batches are selected. To use this function, plea
 
 # U
 errorUploading=Error uploading ''{0}''
+unableToDuplicateLdapGroup=Error: Unable to duplicate LDAP group!
 unableToDuplicateProject=Error: Unable to duplicate project!
 unableToDuplicateTemplate=Error: Unable to duplicate template!
 unableToDuplicateWorkflow=Error: Unable to duplicate workflow!
