--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -259,6 +259,7 @@ doneSteps=Erledigte Schritte
 down=unter
 download=Images herunterladen
 duplicate=Duplizieren
+duplicateLdapGroup=LDAP Gruppe duplizieren
 duplicateProject=Projekt duplizieren
 duplicateTemplate=Produktionsvorlage duplizieren
 duplicateWorkflow=Workflow duplizieren
