Replace single message for duplicate failed with one message

--- a/Kitodo/src/main/resources/messages/errors_de.properties
+++ b/Kitodo/src/main/resources/messages/errors_de.properties
@@ -40,6 +40,7 @@ errorDeleting=Fehler beim L\u00F6schen von ''{0}''
 errorDiagram=Fehler für das Diagramm, das dem Workflow mit der ID {0} zugewiesen wurde.
 errorDirectoryDeleting=Fehler beim L\u00F6schen von ''{0}'' Verzeichnis.
 errorDownloading=Fehler beim Herunterladen von ''{0}''
+errorDuplicate=Fehler: ''{0}'' konnte nicht dupliziert werden!
 
 # E
 errorEmailBody=Es ist ein Fehler in Kitodo aufgetreten. Erg\u00E4nzen Sie bitte hier die Meldung durch eine kurze Beschreibung, was Sie gerade in Kitodo getan haben, als dieser Fehler auftrat\:
@@ -147,10 +148,6 @@ tooManyBatchesSelected=Es sind mehrere Batches ausgew\u00E4hlt. W\u00E4hlen Sie 
 
 # U
 errorUploading=Fehler beim Hochladen von ''{0}''
-unableToDuplicateLdapGroup=Fehler: LDAP Gruppe konnte nicht dupliziert werden!
-unableToDuplicateProject=Fehler: Projekt konnte nicht dupliziert werden!
-unableToDuplicateTemplate=Fehler: Produktionsvorlage konnte nicht dupliziert werden!
-unableToDuplicateWorkflow=Fehler: Workflow konnte nicht dupliziert werden!
 uploadFailed=Das Hochladen ist fehlgeschlagen.
 userAssignedError=Das Projekt kann nicht gel\u00F6scht werden, da diesem noch Benutzer zugewiesen sind.
 userGroupAssignedError=Die Benutzergruppe kann nicht gel\u00F6scht werden, da dieser noch Aufgaben zugewiesen sind.
