--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -40,6 +40,7 @@ errorDeleting=Error deleting ''{0}''
 errorDiagram=Error for diagram assigned to workflow with ID {0}.
 errorDirectoryDeleting=''{0}'' directory could not be deleted.
 errorDownloading=Error downloading ''{0}''
+errorDuplicate=Error: Unable to duplicate ''{0}''!
 
 # E
 errorEmailBody=An error has occurred in Kitodo. Please add to this message a short description of what you were doing in Kitodo when the error occurred.
@@ -145,10 +146,6 @@ tooManyBatchesSelected=Multiple batches are selected. To use this function, plea
 
 # U
 errorUploading=Error uploading ''{0}''
-unableToDuplicateLdapGroup=Error: Unable to duplicate LDAP group!
-unableToDuplicateProject=Error: Unable to duplicate project!
-unableToDuplicateTemplate=Error: Unable to duplicate template!
-unableToDuplicateWorkflow=Error: Unable to duplicate workflow!
 uploadFailed=Upload failed.
 userAssignedError=The project could not be deleted because there are still assigned users.
 userGroupAssignedError=The user group could not be deleted because there are still assigned steps.
