Add copyData function to script section

--- a/Goobi/src/messages/messages_de.properties
+++ b/Goobi/src/messages/messages_de.properties
@@ -352,6 +352,8 @@ confirmNewPassword=Neues Passwort best\u00E4tigen
 confirmRename=Sind Sie sicher, dass Sie diesen Vorgang umbenennen m\u00F6chten?
 contentLoeschen=Content l\u00F6schen
 copy=Kopie
+copyDataError=Fehler beim Kopieren der Daten
+copyDataOk=Daten kopieren erfolgreich
 correctionK=K
 couldNotCreateImageFolder=Das Verzeichnis f\u00FCr die Images konnte nicht angelegt werden
 count=Anzahl
