--- a/Goobi/src/messages/messages_en.properties
+++ b/Goobi/src/messages/messages_en.properties
@@ -354,6 +354,8 @@ confirmNewPassword=Confirm new password
 confirmRename=Are you sure you want to rename this item?
 contentLoeschen=Delete content
 copy=copy
+copyDataError=Error while copying the data
+copyDataOk=Data copying successful
 correctionK=C
 couldNotCreateImageFolder=Image folder could not be created
 count=Count
