Add missing translation for plural filters

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -325,6 +325,7 @@ fileGroupDelete=Dateigruppe l\u00F6schen
 filename=Dateiname
 files=Dateien
 filter=Filter
+filters=Filters
 finished=Beendet
 firstPage=Erste Seite
 folderImport=Import aus Verzeichnis
