--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -326,6 +326,7 @@ fileGroupDelete=Delete file group
 filename=File name
 files=Files
 filter=Filter
+filters=Filters
 finished=Finished
 firstPage=First page
 folderImport=import from folder
