Unify messages files

--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -73,6 +73,8 @@ invalidIdentifierSame=The value of the identifier {0} contains the same values i
 # L
 errorLazyInitialization=An error has occurred with the database connection. This error may have been caused by using the return button of your browser. You probably have to return to Kitodo via the link/url.
 errorLinkText=You may ignore the stack trace and continue your work with a click <a href\="{0}">here</a>.<br/>If this doesn't work you may have to use the navigation or even restart the application by logging out and back in. zzz
+errorLoadingMany=Error loading ''{0}''
+errorLoadingOne=Error loading ''{0}'' with ID {1}
 loginInUse=Login already in use
 loginNotValid=Login '{0}' uses not valid characters or is on black list.
 
