--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -20,7 +20,6 @@ DMSExportByThread=The process is being exported into the DMS by the task manager
 DMSExportThreadCreated=The DMS export for the process has been prepared in the task manager\:
 EmptyTask=Example of a long-running task
 mapping=ElasticSearch mapping
-MetsEditorMissingFile=The file {0} can not be found in {1} folder.
 NOT=does not contain
 NoCataloguePluginForCatalogue=None of the OPAC plugins available is capable of reading this catalogue.
 abDerErstenMarkiertenSeite=From first selected page
@@ -81,8 +80,6 @@ bearbeitungDiesesSchrittesAbgeben=Release edition of this task
 # bearbeitungDiesesSchrittesWirklichAbgeben is used in onclick of xxx_box_Action.xhtml
 bearbeitungDiesesSchrittesWirklichAbgeben=Do you really want to release the edition of this task and set the status to "open" again?
 bearbeitungDiesesSchrittsUebernehmen=Accept editing of this task
-bearbeitungsstatusHochsetzen=Set status of process up
-bearbeitungsstatusRuntersetzen=Set status of process down
 beimAbschliessenVerifizieren=Validate on exit
 selectPlease=Please select
 blattzaehlung=Sheet counting
@@ -140,6 +137,7 @@ calendar.sheet.issue.selected=appeared
 calendar.upload=Import
 calendar.upload.submit=Submit file
 cancel=Cancel
+choice=Actions
 citation.accessTimestamp=Accessed\:
 citation.containedIn=In\:
 citation.pages=Pages
@@ -334,7 +332,7 @@ folderImport=import from folder
 folderUse=Folder use
 folderUse.generatorSource=Use as source to generate contents
 folderUse.generatorSource.disabled=Content generation disabled
-folderUse.pageView=Use for the media view
+folderUse.mediaView=Use for the media view
 folderUse.mediaView.disabled=Media view disabled
 folderUse.preview=Use as preview
 folderUse.preview.disabled=Preview disabled
