TRanslate some messages used on tasks pages

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -76,9 +76,9 @@ batchProperties=Batch properties
 batchStep=Batch task
 batches=Batches
 edit=Edit
-bearbeitungDiesesSchrittesAbgeben=Release edition of this task
-# bearbeitungDiesesSchrittesWirklichAbgeben is used in onclick of xxx_box_Action.xhtml
-bearbeitungDiesesSchrittesWirklichAbgeben=Do you really want to release the edition of this task and set the status to "open" again?
+releaseTask=Release edition of this task
+# reallyReleaseTask is used in onclick of xxx_box_Action.xhtml
+reallyReleaseTask=Do you really want to release the edition of this task and set the status to "open" again?
 bearbeitungDiesesSchrittsUebernehmen=Accept editing of this task
 beimAbschliessenVerifizieren=Validate on exit
 selectPlease=Please select
@@ -237,7 +237,7 @@ details=Details
 detailsDesArbeitsschritts=Details of the task
 detailsDesSchritts=Details of the task
 detailsOfBatch=batch details
-diesenSchrittAbschliessen=Finish this task
+closeTask=Finish this task
 digitalCollections=Digital collections
 directory=Folder
 directoryRemoved=Removed directory from home directory
@@ -251,6 +251,7 @@ dmsImportPathXmlFile=DMS import path for XML file
 dmsImportSuccessPath=DMS import success path
 docket=Docket
 dockets=Dockets
+docketPrint=Print docket
 # docketSaving is used in docketEdit.xhtml - line 45
 docketSaving=Saving docket...
 docstructAnAndereStelleSchieben=Move docstruct to other location
@@ -424,7 +425,7 @@ lastEdited=Last edited
 lastPage=Last page
 lastPageAdd=Insert as last page
 lastUpdatedBy=Last updated by
-docketPrint=Print docket
+later=Please try again in a few minutes.
 ldapActiveNote=LDAP authentication active
 ldapKonfigurationSchreiben=Write LDAP configuration
 ldapWritten=LDAP configuration successfully written for user\: ????
@@ -461,10 +462,6 @@ massDownload=Bulk downloads
 massImport=mass import
 masterpieceProperties=workpiece property
 meineAufgabenMsg=Please select one of the listed tasks.
-meldungUeberProblemloesungAnNachchfolgendeStationSenden=Send message about problem solution to following task
-meldungUeberProblemloesungSenden=Send message about problem solution
-meldungUeberProblemloesungSendenForAll=send troubleshooting message to all steps
-meldungUeberProblemloesungSendenSingle=send troubleshooting message to the current step
 messageAdd=Add message
 messages=Messages
 metadata=Metadata
@@ -662,6 +659,10 @@ selectAll=Select all
 selectFilter=Select pre-defined filter
 selectFromExistingProcesses=Choose from previous processes
 selectPlugin=Please select a Plugin.
+sendSolutionMessageNextTask=Send message about problem solution to following task
+sendSolutionMessage=Send message about problem solution
+sendSolutionMessageForAll=send troubleshooting message to all steps
+sendSolutionMessageForSingle=send troubleshooting message to the current step
 serversideDownload=Server side import
 serversideUpload=Server side export
 setRepresentative=Set representative\:
@@ -672,10 +673,9 @@ showAutomaticTasks=show automatic tasks
 showClosedProcesses=Show closed processes
 showDataForProcess=show process data
 signIn=Sign in
-# sollDerContentWirklichGeloeschtWerden is used in onclick
-sollDerContentWirklichGeloeschtWerden=Do you really want to delete the content?
-sollDieserEintragWirklichGeloeschtWerden=Do you really want to delete this item?
-later=Please try again in a few minutes.
+# shouldContentBeRemoved is used in onclick
+shouldContentBeRemoved=Do you really want to delete the content?
+shouldItemBeRemoved=Do you really want to delete this item?
 spalteVorgangsdatumInEigenenAufgabenAnzeigen=Show process date column in user task list
 surname=Surname
 save=Save
@@ -795,8 +795,8 @@ weeks=weeks
 weiterZuArbeitsschritt=Send to task
 wholeIndex=Whole index
 wikiField=Wiki field
-# wirklichAusfuehren is used many times in onclick
-wirklichAusfuehren=Are you sure you want to execute?
+# reallyExecute is used many times in onclick
+reallyExecute=Are you sure you want to execute?
 workflow=Workflow
 workflowSaving=Saving workflow...
 workflows=Workflows
