--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -76,9 +76,9 @@ batchProperties=Batch Eigenschaften
 batchStep=Batch Schritt
 batches=Batches
 edit=Bearbeiten
-bearbeitungDiesesSchrittesAbgeben=Die Bearbeitung dieser Aufgabe wieder abgeben
-# bearbeitungDiesesSchrittesWirklichAbgeben is used in onclick of xxx_box_Action.xhtml
-bearbeitungDiesesSchrittesWirklichAbgeben=M\u00F6chten Sie die Bearbeitung dieser Aufgabe wirklich abgeben und den Schritt wieder auf "offen" setzen?
+releaseTask=Die Bearbeitung dieser Aufgabe wieder abgeben
+# reallyReleaseTask is used in onclick of xxx_box_Action.xhtml
+reallyReleaseTask=M\u00F6chten Sie die Bearbeitung dieser Aufgabe wirklich abgeben und den Schritt wieder auf "offen" setzen?
 bearbeitungDiesesSchrittsUebernehmen=Die Bearbeitung dieser Aufgabe \u00FCbernehmen
 beimAbschliessenVerifizieren=Beim Abschlie\u00DFen verifizieren
 selectPlease=Bitte ausw\u00E4hlen
@@ -237,7 +237,7 @@ details=Details
 detailsDesArbeitsschritts=Details der Aufgabe
 detailsDesSchritts=Details der Aufgabe
 detailsOfBatch=Batchdetails
-diesenSchrittAbschliessen=Die Bearbeitung dieser Aufgabe abschlie\u00DFen
+closeTask=Die Bearbeitung dieser Aufgabe abschlie\u00DFen
 digitalCollections=Digitale Kollektionen
 directory=Verzeichnis
 directoryRemoved=Verzeichnis aus Benutzerhome entfernt
@@ -251,6 +251,7 @@ dmsImportPathXmlFile=DMS-Export-Ordner f\u00FCr XML-Datei
 dmsImportSuccessPath=DMS-Export-Success-Ordner
 docket=Laufzettel
 dockets=Laufzettel
+docketPrint=Laufzettel drucken
 # docketSaving is used in docketEdit.xhtml - line 45
 docketSaving=Laufzettel wird gespeichert...
 docstructAnAndereStelleSchieben=Strukturelement an andere Stelle schieben
@@ -425,7 +426,7 @@ lastEdited=Letzte Aktualisierung
 lastPage=Letzte Seite
 lastPageAdd=Als letzte Seite einf\u00FCgen
 lastUpdatedBy=Letzte Aktualisierung durch
-docketPrint=Laufzettel drucken
+later=Bitte versuchen Sie es in einigen Minuten erneut.
 ldapActiveNote=LDAP-Authentifizierung aktiv
 ldapKonfigurationSchreiben=LDAP-Konfiguration schreiben
 ldapWritten=LDAP Konfiguration erfolgreich geschrieben f\u00FCr\:
@@ -462,10 +463,6 @@ massDownload=Massendownload
 massImport=Massenimport
 masterpieceProperties=Werkst\u00FCckeigenschaft
 meineAufgabenMsg=W\u00E4hlen Sie eine der unten gelisteten Aufgaben zur Bearbeitung aus.
-meldungUeberProblemloesungAnNachchfolgendeStationSenden=Meldung \u00FCber Probleml\u00F6sung an nachfolgende Station senden
-meldungUeberProblemloesungSenden=Meldung \u00FCber Probleml\u00F6sung senden
-meldungUeberProblemloesungSendenForAll=Meldung \u00FCber Probleml\u00F6sung f\u00FCr alle Schritte senden
-meldungUeberProblemloesungSendenSingle=Meldung \u00FCber Probleml\u00F6sung f\u00FCr den aktuellen Schritt senden
 messageAdd=Nachricht hinzuf\u00FCgen
 messages=Nachrichten
 metadata=Metadaten
@@ -663,6 +660,10 @@ selectAll=Alle ausw\u00E4hlen
 selectFilter=Vordefinierter Filter
 selectFromExistingProcesses=Ausw\u00E4hlen aus vorhandenen Vorg\u00E4ngen
 selectPlugin=Bitte w\u00E4hlen Sie ein Plugin aus.
+sendSolutionMessageNextTask=Meldung \u00FCber Probleml\u00F6sung an nachfolgende Station senden
+sendSolutionMessage=Meldung \u00FCber Probleml\u00F6sung senden
+sendSolutionMessageForAll=Meldung \u00FCber Probleml\u00F6sung f\u00FCr alle Schritte senden
+sendSolutionMessageForSingle=Meldung \u00FCber Probleml\u00F6sung f\u00FCr den aktuellen Schritt senden
 serversideDownload=Serverseitiges importieren
 serversideUpload=Serverseitiges exportieren
 setRepresentative=Repr\u00E4sentant setzen\:
@@ -673,10 +674,9 @@ showAutomaticTasks=Automatische Aufgaben anzeigen
 showClosedProcesses=Abgeschlossene Vorg\u00E4nge zeigen
 showDataForProcess=Zeige Daten des Vorgangs
 signIn=Anmelden
-# sollDerContentWirklichGeloeschtWerden is used in onclick
-sollDerContentWirklichGeloeschtWerden=Soll der Inhalt wirklich gel\u00F6scht werden?
-sollDieserEintragWirklichGeloeschtWerden=Soll dieser Eintrag wirklich gel\u00F6scht werden?
-later=Bitte versuchen Sie es in einigen Minuten erneut.
+# shouldContentBeRemoved is used in onclick
+shouldContentBeRemoved=Soll der Inhalt wirklich gel\u00F6scht werden?
+shouldItemBeRemoved=Soll dieser Eintrag wirklich gel\u00F6scht werden?
 spalteVorgangsdatumInEigenenAufgabenAnzeigen=Spalte der Vorgangsdaten in eigenen Aufgaben anzeigen
 surname=Nachname
 save=Speichern
@@ -796,8 +796,8 @@ weeks=Wochen
 weiterZuArbeitsschritt=Senden an Arbeitsschritt
 wholeIndex=Gesamter Index
 wikiField=Wiki-Feld
-# wirklichAusfuehren is used many times in onclick
-wirklichAusfuehren=M\u00F6chten Sie wirklich diesen Schritt ausf\u00FChren?
+# reallyExecute is used many times in onclick
+reallyExecute=M\u00F6chten Sie wirklich diesen Schritt ausf\u00FChren?
 workflow=Workflow
 workflowSaving=Workflow wird gespeichert...
 workflows=Workflows
