Adjust frontend to display filters

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -327,6 +327,8 @@ fileGroupDelete=Dateigruppe l\u00F6schen
 filename=Dateiname
 files=Dateien
 filter=Filter
+filterAdjust=Filter anpassen
+filterApply=Filter anwenden
 filters=Filters
 finished=Beendet
 firstPage=Erste Seite
@@ -539,8 +541,6 @@ numProzesse={0} Vorg\u00E4nge
 numberImages=Anzahl der Seiten
 numberVolumes=Anzahl der B\u00E4nde
 nurDieMarkiertenSeiten=Nur die markierten Seiten
-nurEigeneAufgabenAnzeigen=Nur eigene Aufgaben anzeigen
-nurOffeneAufgabenAnzeigen=Nur offene Aufgaben anzeigen
 objectType=Objekttyp
 ocr=OCR
 oderSperrungAufheben=Oder heben Sie die Sperrung hier auf.
@@ -668,11 +668,13 @@ serversideDownload=Serverseitiges importieren
 serversideUpload=Serverseitiges exportieren
 setRepresentative=Repr\u00E4sentant setzen\:
 settings=Einstellungen
-showInSelectList=In Auswahlliste anzeigen
-showInactiveProjects=Deaktivierte Projekte zeigen
 showAutomaticTasks=Automatische Aufgaben anzeigen
 showClosedProcesses=Abgeschlossene Vorg\u00E4nge zeigen
 showDataForProcess=Zeige Daten des Vorgangs
+showInSelectList=In Auswahlliste anzeigen
+showInactiveProjects=Deaktivierte Projekte zeigen
+showOnlyOwnTasks=Nur eigene Aufgaben anzeigen
+showOnlyOpenTasks=Nur offene Aufgaben anzeigen
 signIn=Anmelden
 # shouldContentBeRemoved is used in onclick
 shouldContentBeRemoved=Soll der Inhalt wirklich gel\u00F6scht werden?
