--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -326,6 +326,8 @@ fileGroupDelete=Delete file group
 filename=File name
 files=Files
 filter=Filter
+filterAdjust=Adjust filter
+filterApply=Apply filter
 filters=Filters
 finished=Finished
 firstPage=First page
@@ -539,8 +541,6 @@ numProzesse={0} processes
 numberImages=Number of pages
 numberVolumes=Number of volumes
 nurDieMarkiertenSeiten=Only the selected pages
-nurEigeneAufgabenAnzeigen=Show only my tasks
-nurOffeneAufgabenAnzeigen=Show open tasks only
 ocr=OCR
 objectType=Object type
 oderSperrungAufheben=Or unlock here.
@@ -667,11 +667,13 @@ serversideDownload=Server side import
 serversideUpload=Server side export
 setRepresentative=Set representative\:
 settings=Settings
-showInSelectList=Show in selection list
-showInactiveProjects=show deactivated projects
 showAutomaticTasks=show automatic tasks
 showClosedProcesses=Show closed processes
 showDataForProcess=show process data
+showInSelectList=Show in selection list
+showInactiveProjects=show deactivated projects
+showOnlyOwnTasks=Show only my tasks
+showOnlyOpenTasks=Show open tasks only
 signIn=Sign in
 # shouldContentBeRemoved is used in onclick
 shouldContentBeRemoved=Do you really want to delete the content?
