--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -336,7 +336,7 @@ formConfigurationMismatch=Unstimmige Formularkonfiguration\:
 from=von
 gallery=Galerie
 generate=Generieren
-generator={0}-Images erzeugen
+generator={0}-Bilder erzeugen
 generatePNGs=PNGs generieren
 getNormDataRecord=laden
 granularity.apply=anwenden
