Use processing status translation on task list page

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -689,11 +689,12 @@ startDate=Startdatum
 startIndexing=Indexierung starten
 startPage=Startseite
 status=Status
-statusAbgeschlossen=Abgeschlossen
+statusDone=Abgeschlossen
 statusForUsers=Zust\u00E4ndigkeit der Benutzergruppen
 statusHoeherSetzen=Bearbeitungsstatus h\u00F6her setzen
-statusInBearbeitung=In Bearbeitung
-statusOffen=Offen
+statusLocked=Gesperrt
+statusInProcessing=In Bearbeitung
+statusOpen=Offen
 statusRunterSetzen=Bearbeitungsstatus tiefer setzen
 stepDoneByUser=Schritt abgeschlossen von Benutzer
 stop=Stop
