--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -688,11 +688,12 @@ startDate=Start date
 startIndexing=Start indexing
 startPage=Home page
 status=Status
-statusAbgeschlossen=Completed
+statusDone=Completed
 statusForUsers=Responsible user groups
 statusHoeherSetzen=Move status up
-statusInBearbeitung=In process
-statusOffen=Open
+statusInProcessing=In process
+statusLocked=Locked
+statusOpen=Open
 statusRunterSetzen=Move status down
 stepDoneByUser=Step done by user
 stop=Stop
