Fix navigation link in extended search and cleanup code

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -536,6 +536,7 @@ ldapServerNew=Neuen LDAP-Server anlegen
 next=Weiter
 no=Nein
 normDataRecord=URI
+notSelected=Keine Auswahl
 nr=Nr.
 numProzesse={0} Vorg\u00E4nge
 numberImages=Anzahl der Seiten
@@ -586,7 +587,7 @@ processList=Vorgangsliste
 processManagement=Verwaltung
 processProperties=Vorgangseigenschaft
 processSaving=Vorgang wird gespeichert...
-processesSaving=Vorgänge werden gespeichert...
+processesSaving=Vorg\u00E4nge werden gespeichert...
 processTitle=Vorgangstitel
 processes=Vorg\u00E4nge
 processesInThisBatch=Vorg\u00E4nge in diesem Batch
