--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -536,6 +536,7 @@ newLdapServer=New LDAP server
 next=Next
 no=no
 normDataRecord=URI
+notSelected=No selection
 nr=Number
 numProzesse={0} processes
 numberImages=Number of pages
