Use kitodo styled dialog windows for close and release task

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -77,7 +77,6 @@ batchStep=Batch Schritt
 batches=Batches
 edit=Bearbeiten
 releaseTask=Die Bearbeitung dieser Aufgabe wieder abgeben
-# reallyReleaseTask is used in onclick of xxx_box_Action.xhtml
 reallyReleaseTask=M\u00F6chten Sie die Bearbeitung dieser Aufgabe wirklich abgeben und den Schritt wieder auf "offen" setzen?
 bearbeitungDiesesSchrittsUebernehmen=Die Bearbeitung dieser Aufgabe \u00FCbernehmen
 beimAbschliessenVerifizieren=Beim Abschlie\u00DFen verifizieren
@@ -169,6 +168,7 @@ configurationFile=Konfigurationsdatei
 configurationOPAC=OPAC Konfiguration
 configurationSaving=Konfiguration wird gespeichert...
 confirm=Diese Aktion kann einige Zeit dauern. Sind Sie sicher, dass Sie fortfahren m\u00F6chten?
+confirmClose=Schlie\u00DFen best\u00E4tigen
 confirmDelete=L\u00F6schen best\u00E4tigen
 confirmDeleteClient=Mandant l\u00F6schen?
 confirmDeleteDocket=Laufzettel l\u00F6schen?
@@ -181,6 +181,7 @@ confirmDeleteUser=Benutzer l\u00F6schen?
 confirmDeleteUsergroup=Benutzergruppe l\u00F6schen?
 confirmDeleteWorkflow=Workflow l\u00F6schen?
 confirmNewPassword=Neues Passwort best\u00E4tigen
+confirmRelease=Abgeben best\u00E4tigen
 copy=Kopie
 copyTemplates=Projekt inkl. Templates kopieren
 correction=Korrektur
