--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -77,7 +77,6 @@ batchStep=Batch task
 batches=Batches
 edit=Edit
 releaseTask=Release edition of this task
-# reallyReleaseTask is used in onclick of xxx_box_Action.xhtml
 reallyReleaseTask=Do you really want to release the edition of this task and set the status to "open" again?
 bearbeitungDiesesSchrittsUebernehmen=Accept editing of this task
 beimAbschliessenVerifizieren=Validate on exit
@@ -169,6 +168,7 @@ configurationFile=Configuration file
 configurationOPAC=OPAC configuration
 configurationSaving=Saving configuration...
 confirm=This operation may take some time. Are you sure you want to continue?
+confirmClose=Confirm close
 confirmDelete=Confirm delete
 confirmDeleteClient=Delete client?
 confirmDeleteDocket=Delete docket?
@@ -181,6 +181,7 @@ confirmDeleteUser=Delete user?
 confirmDeleteUsergroup=Delete user group?
 confirmDeleteWorkflow=Delete workflow?
 confirmNewPassword=Confirm new password
+confirmRelease=Confirm release
 copy=copy
 copyTemplates=Copy Project including Templates
 correction=Correction
