Inserts action links to create images and implements the functionality
Functioning:
To manually start image generation, corresponding action links are
displayed in the task. If you click on one of the links, the generation
will be triggered. There are tree different functions that trigger the
creation of all images, the creation of missing images, or the creation
of damaged and missing images.

Implementation:
The additional action links have been added to the taskBoxActivities.xml
page. The functions have been implemented in CurrentTaskForm. Each of
them parameterizes an ImageGenerator, which is passed to a
TaskImageGeneratorThread for execution in the task manager, since the
creation of the images can take a while for large processes. This allows
an operator to manage the progress of the task in TaskManager. The class
ImageGeneratorTask has been implemented. For this a function had to be
developed, which can list the contents of a folder. This is a tricky
business, as a special bell has been implemented, that the project
folders have to deal with the situation that the contents of several
conceptual folders are in the same digital folder on the hard disk. A
complicated filtering process is necessary to straighten that out. To be
able to use the properly functioning modules in the core, there must be
a text file in the JAR files that indicates the mapping from the
interface to the implementation. This file was missing in two modules
and has been added. It was found that the modules can not be loaded if
the library JARs they use are not referenced in the core. Therefore, the
necessary JARs have been added to the pom.xml of the core module.

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -237,6 +237,7 @@ details=Details
 detailsDesArbeitsschritts=Details der Aufgabe
 detailsDesSchritts=Details der Aufgabe
 detailsOfBatch=Batchdetails
+determineWhichImagesNeedToBeGenerated=\u00DCberpr\u00FCfe {0}
 closeTask=Die Bearbeitung dieser Aufgabe abschlie\u00DFen
 digitalCollections=Digitale Kollektionen
 directory=Verzeichnis
@@ -344,6 +345,9 @@ formConfigurationMismatch=Unstimmige Formularkonfiguration\:
 from=von
 gallery=Galerie
 generate=Generieren
+generateImages=Generiere {0}
+generateMissingImages=Das Generieren aller fehlenden Bilder starten
+generateMissingImagesStarted=Alle fehlenden Bilder werden vom Taskmanager generieren gelassen
 generator={0}-Bilder erzeugen
 generatePNGs=PNGs generieren
 getNormDataRecord=laden
@@ -394,6 +398,7 @@ idImport=ID Import
 idList = Idliste
 linkHomeDirectory=Im Homeverzeichnis verlinken
 imHomeVerzeichnisVerlinkenTrotzBearbeitung=Imageordner in Homeverzeichnis verlinken, obwohl ein anderer Nutzer gerade damit arbeitet.
+ImageGeneratorTask=Bilder generieren
 imageNumber=Bildnummer
 imageSelection=Datei ausw\u00E4hlen
 imageVisualization=Bildanzeige
@@ -449,6 +454,7 @@ ldaplogin=LDAP login
 legal=Rechtliches
 link=Verkn\u00FCpfung
 linkImage=Bild verlinken
+listSourceFolder=Suche nach Dateien
 loadAllProcesses=Alle Vorg\u00E4nge laden
 loadAssociatedBatchOfProcess=Die enthaltenden Batches der gew\u00E4hlten Vorg\u00E4nge ausw\u00E4hlen
 loadProcessesOfBatch=Vorg\u00E4nge des/der ausgew\u00E4hlten Batches laden
@@ -621,6 +627,10 @@ queryOPAC=OPAC abfragen
 ready=Fertig
 recordImport=Datensatz-Import
 records=Datens\u00E4tze
+regenerateAllImages=Das neu Generieren aller Bilder starten
+regenerateAllImagesStarted=Alle Bilder werden vom Taskmanager neu generieren gelassen
+regenerateMissingAndDamagedImages=Das neu Generieren aller fehlenden und besch\u00E4digten Bilder starten
+regenerateMissingAndDamagedImagesStarted=Alle fehlenden und besch\u00E4digten Bilder werden vom Taskmanager neu generieren gelassen
 reload=Aktualisieren
 remark=Bemerkung
 removeFilter=Filter entfernen
