--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -238,6 +238,7 @@ details=Details
 detailsDesArbeitsschritts=Details of the task
 detailsDesSchritts=Details of the task
 detailsOfBatch=batch details
+determineWhichImagesNeedToBeGenerated=Checking {0}
 closeTask=Finish this task
 digitalCollections=Digital collections
 directory=Folder
@@ -344,6 +345,9 @@ formConfigurationMismatch=Form configuration mismatch\:
 from=from
 gallery=Gallery
 generate=Generate
+generateImages=Generating {0}
+generateMissingImages=Start the generation of all missing images
+generateMissingImagesStarted=The task manager is having all missing images generated
 generator=Generate {0} images
 generatePNGs=Generate PNGs
 getNormDataRecord=load
@@ -394,6 +398,7 @@ idImport=ID import
 idList = List ids
 linkHomeDirectory=Link within home directory
 imHomeVerzeichnisVerlinkenTrotzBearbeitung=Link image folder in user home even though another user is working with this data.
+ImageGeneratorTask=Generating images
 imageNumber=Image number
 imageVisualization=Image visualization
 imageSelection=Select file
@@ -449,6 +454,7 @@ ldapServerNew=Add new LDAP server
 legal=Legal
 link=Link
 linkImage=Link image
+listSourceFolder=Searching for files
 loadAllProcesses=Load all processes
 loadAssociatedBatchOfProcess=Highlight the batches containing the chosen processes
 loadProcessesOfBatch=load processes of the selected batch
@@ -621,6 +627,10 @@ queryOPAC=Query OPAC
 ready=Ready
 recordImport=record import
 records=records
+regenerateAllImages=Start the regeneration of all images
+regenerateAllImagesStarted=The task manager is having all images regenerated
+regenerateMissingAndDamagedImages=Start the regeneration of all missing or damaged images
+regenerateMissingAndDamagedImagesStarted=The task manager is having all missing or damaged images regenerated
 reload=reload
 remark=Remark
 removeFilter=Remove filter from list
