Fix deleting LDAP group and add the empty required fields.

--- a/Kitodo/src/main/resources/messages/errors_de.properties
+++ b/Kitodo/src/main/resources/messages/errors_de.properties
@@ -77,6 +77,7 @@ errorLoadingMany=Fehler beim Laden von ''{0}''
 errorLoadingOne=Fehler beim Laden von ''{0}'' mit ID {1}
 loginInUse=Login ist bereits vergeben
 loginNotValid=Login '{0}' enth\u00E4lt ung\u00FCltige Zeichen oder ist auf Blackliste.
+ldapGroupInUse=Die LDAP-Gruppe ist noch mit Users verkn\u00FCpft und kann nicht gel\u00F6scht werden.
 
 # M
 errorMassDownloadProjectCreation=Der Projektordner {0} kann nicht erstellt werden.
