--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -77,6 +77,7 @@ errorLoadingMany=Error loading ''{0}''
 errorLoadingOne=Error loading ''{0}'' with ID {1}
 loginInUse=Login already in use
 loginNotValid=Login '{0}' uses not valid characters or is on black list.
+ldapGroupInUse=The LdapGroup is still associated with users and could not be deleted.
 
 # M
 errorMassDownloadProjectCreation=The project folder {0} could not be created.
