Fix ordering and adjust spelling

--- a/Kitodo/src/main/resources/messages/errors_de.properties
+++ b/Kitodo/src/main/resources/messages/errors_de.properties
@@ -75,9 +75,9 @@ errorLazyInitialization=Ein Fehler mit der Datenbankverbindung trat auf. Eventue
 errorLinkText=Hier geht es zur\u00FCck auf die <a href\="{0}">Kitodo-Startseite</a>, evtl. m\u00FCssen Sie sich dort neu einloggen.
 errorLoadingMany=Fehler beim Laden von ''{0}''
 errorLoadingOne=Fehler beim Laden von ''{0}'' mit ID {1}
+ldapGroupInUse=Die LDAP Gruppe ist noch mit Benutzern verkn\u00FCpft und kann nicht gel\u00F6scht werden.
 loginInUse=Login ist bereits vergeben
 loginNotValid=Login '{0}' enth\u00E4lt ung\u00FCltige Zeichen oder ist auf Blackliste.
-ldapGroupInUse=Die LDAP-Gruppe ist noch mit Users verkn\u00FCpft und kann nicht gel\u00F6scht werden.
 
 # M
 errorMassDownloadProjectCreation=Der Projektordner {0} kann nicht erstellt werden.
