--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -75,9 +75,9 @@ errorLazyInitialization=An error has occurred with the database connection. This
 errorLinkText=You may ignore the stack trace and continue your work with a click <a href\="{0}">here</a>.<br/>If this doesn't work you may have to use the navigation or even restart the application by logging out and back in. zzz
 errorLoadingMany=Error loading ''{0}''
 errorLoadingOne=Error loading ''{0}'' with ID {1}
+ldapGroupInUse=The LDAP group is still associated with users and could not be deleted.
 loginInUse=Login already in use
 loginNotValid=Login '{0}' uses not valid characters or is on black list.
-ldapGroupInUse=The LdapGroup is still associated with users and could not be deleted.
 
 # M
 errorMassDownloadProjectCreation=The project folder {0} could not be created.
