Add first version of SRU import client

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -678,6 +678,8 @@ pageCountDouble=Page counting double pages
 pageCountRectoVerso=RectoVerso Foliation
 select=Select
 selectAll=Select all
+selectCatalog=Select OPAC
+selectSearchField=Select search field
 selectFilter=Select pre-defined filter
 selectFromExistingProcesses=Choose from previous processes
 selectPlugin=Please select a Plugin.
