--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -680,6 +680,8 @@ pageCountDouble=Seitenz\u00E4hlung Doppelseiten
 pageCountRectoVerso=Seitenz\u00E4hlung recto-verso
 select=Ausw\u00E4hlen
 selectAll=Alle ausw\u00E4hlen
+selectCatalog=OPAC ausw\u00E4hlen
+selectSearchField=Suchfeld ausw\u00E4hlen
 selectFilter=Vordefinierter Filter
 selectFromExistingProcesses=Ausw\u00E4hlen aus vorhandenen Vorg\u00E4ngen
 selectPlugin=Bitte w\u00E4hlen Sie ein Plugin aus.
