--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -797,6 +797,7 @@ userNotFound=User not found
 userSaving=Saving user...
 validatingData=Validating data...
 validate=Validate
+validator=Validate {0} images
 value=Value
 verlinkungDesBildesMitStrukturelement=Link the image with the selected structure element
 volume=volume
