Update frontend for partial indexing

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -699,6 +699,8 @@ search=Suche
 start=Start
 startDate=Startdatum
 startIndexing=Indexierung starten
+startIndexingAll=Komplette Indexierung starten
+startIndexingRemaining=Indexierung vervollst\u00E4ndigen
 startPage=Startseite
 status=Status
 statusDone=Abgeschlossen
