--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -698,6 +698,8 @@ search=Search
 start=Start
 startDate=Start date
 startIndexing=Start indexing
+startIndexingAll=Start indexing for all
+startIndexingRemaining=Start indexing for not indexed
 startPage=Home page
 status=Status
 statusDone=Completed
