Unify save of property in batch processes + add delete functionality

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -57,7 +57,6 @@ arabic=arabisch
 assigned=Zugewiesen
 ats=ATS
 ausGruppeLoeschen=Benutzer aus der Benutzergruppe l\u00F6schen
-deleteLinkHomeDirectory=Verlinkung aus Homeverzeichnis entfernen
 ausgewaehltesStrukturelement=Ausgew\u00E4hltes Strukturelement
 actions=Aktionen
 automatic=automatisch
@@ -230,7 +229,9 @@ delete=L\u00F6schen
 deleteAfterMove=Nach dem Export l\u00F6schen
 deleteBatch=Den ausgew\u00E4hlten Batch l\u00F6schen
 deleteIndex=ElasticSearch Index l\u00F6schen
+deleteLinkHomeDirectory=Verlinkung aus Homeverzeichnis entfernen
 deleteFromProject=Benutzer aus der Projekt l\u00F6schen
+deleteProperty=Die ausgew\u00E4hlte Eigenschaft l\u00F6schen
 deleteTask=Aufgabe l\u00F6schen
 desktop=Desktop
 details=Details
