--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -57,7 +57,6 @@ arabic=Arabic
 assigned=Assigned
 ats=ATS
 ausGruppeLoeschen=Delete user from group
-deleteLinkHomeDirectory=Remove link from home directory
 ausgewaehltesStrukturelement=Selected docstruct
 actions=Actions
 automatic=automatic
@@ -228,9 +227,11 @@ days=days
 defaults=Defaults
 delete=Delete
 deleteAfterMove=Delete after export
-deleteBatch=delete the selected batch
+deleteBatch=Delete the selected batch
+deleteLinkHomeDirectory=Remove link from home directory
 deleteIndex=Delete ElasticSearch index
 deleteFromProject=Delete user from project
+deleteProperty=Delete the selected property
 deleteTask=Delete task
 desktop=Desktop
 details=Details
