Import documents from locally uploaded MODS files

--- a/Goobi/src/messages/messages_de.properties
+++ b/Goobi/src/messages/messages_de.properties
@@ -336,6 +336,7 @@ calendar.yearSettings.yearStart=Erster Tag des Jahres\:
 calendar.yearSettings.yearStart.format=d.M.
 calendar.yearSettings.yearStart.IllegalArgumentException=Der erste Tag des Jahres ist ein ung\u00FCltiges Datum. Bitte geben Sie ein g\u00FCltiges Datum in der Form \u201CTag.Monat.\u201D ein.
 calculateStatistics=Statistik berechnen
+catalogue=Katalog
 category=Kategorie
 chart=Diagramm
 chartAndTable=Diagramm & Tabelle
