--- a/Goobi/src/messages/messages_en.properties
+++ b/Goobi/src/messages/messages_en.properties
@@ -337,6 +337,7 @@ calendar.yearSettings.yearName=Label for the year\:
 calendar.yearSettings.yearStart=First day of the year\:
 calendar.yearSettings.yearStart.format=M/d
 calendar.yearSettings.yearStart.IllegalArgumentException=The first day of the year is an invalid date. Please enter a valid date in form \u201Cmonth/day\u201D.
+catalogue=Catalogue
 catalogue_used=Catalogue used\:
 category=Category
 chart=Chart
