--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -176,7 +176,7 @@ confirmDeleteProject=Delete project?
 confirmDeleteRuleset=Delete ruleset?
 confirmDeleteTemplate=Delete template?
 confirmDeleteUser=Delete user?
-confirmDeleteUsergroup=Delete user group?
+confirmDeleteRole=Delete user group?
 confirmDeleteWorkflow=Delete workflow?
 confirmNewPassword=Confirm new password
 confirmRelease=Confirm release
@@ -207,7 +207,7 @@ createNewLdapGroup=Create new LDAP group
 createNewProcess=Create new process
 createNewProcessFromTemplate=Create process from template
 createNewRuleset=Create new rule set
-createNewUserGroup=Create new user group
+createNewRole=Create new user group
 createNewWorkflow=Create new workflow
 createPdf=create pdf
 createXML=Export logfile as XML file to home directory
@@ -538,7 +538,7 @@ newProcess=New process
 newWorkflow=New workflow
 newBatch=New batch
 newUser=New user
-newUserGroup=New user group
+newRole=New user group
 newLdapGroup=New LDAP group
 newLdapServer=New LDAP server
 next=Next
@@ -637,7 +637,7 @@ removeFilter=Remove filter from list
 removeFromAssociatedBatch=remove selected processes from assigned batches
 removeFromBatch=Removed process from batch {0}.
 removeUser=Remove user
-removeUsergroup=Remove user group
+removeRole=Remove user group
 renameBatch=Rename batch
 requiredField=Fields marked with * are required
 resultPDF=Result PDF
@@ -645,6 +645,10 @@ resultSet=Result set
 rights=Rights
 roman=Roman
 role=Role
+roleEdit=Edit role
+roleView=View role
+roles=Roles
+rolesAdd=Add roles
 ruleset=Rule set
 rulesetEdit=Edit rule set
 # rulesetSaving is used in rulesetEdit.xhtml - line 39
@@ -779,11 +783,6 @@ username=Username
 users=Users
 userEdit=Edit user
 userAdd=Add user
-userGroup=User group
-userGroupEdit=Edit user group
-userGroupView=View user group
-userGroups=User groups
-userGroupsAdd=Add user groups
 userConfiguration=User configuration
 userCreate=Create new user
 userInstruction=User instructions
@@ -793,8 +792,8 @@ userManagement=User management
 userData=User data \u0026 settings
 userDN=User DN
 userView=View user
-# userGroupSaving is used in usergroupEdit.xhtml - line 40
-userGroupSaving=Saving user group
+# roleSaving is used in roleEdit.xhtml - line 40
+roleSaving=Saving user group
 userNotFound=User not found
 # userSaving is used in userEdit.xhtml - line 39
 userSaving=Saving user...
