Update messages to change user group to role

--- a/Kitodo/src/main/resources/messages/errors_de.properties
+++ b/Kitodo/src/main/resources/messages/errors_de.properties
@@ -132,7 +132,7 @@ propertiesForProcessNotSaved=Eigenschaften des Prozesses {0} konnten nicht gespe
 errorReading=Fehler beim Einlesen von ''{0}''.
 errorReloading=Fehler beim Aktualisieren von ''{0}''
 errorRenaming=Fehler beim Umbenennen von {0}
-roleAssignedError=Die Benutzergruppe kann nicht gel\u00F6scht werden, da dieser noch Aufgaben zugewiesen sind.
+roleAssignedError=Rolle kann nicht gel\u00F6scht werden, da dieser noch Aufgaben zugewiesen sind.
 rulesetInUse=Regelsatz ist noch mit Vorg\u00E4ngen verkn\u00FCpft und kann nicht gel\u00F6scht werden.
 rulesetNotFound=Die angegebene Regelsatzdatei konnte nicht gefunden werden.
 rulesetTitleDuplicated=Der Regelsatz mit den gleichen Titel existiert schon.
