--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -132,7 +132,7 @@ propertiesForProcessNotSaved=Properties for process {0} could not be saved.
 errorReading=Error while reading from ''{0}''.
 errorReloading=Error reloading ''{0}''
 errorRenaming=Error renaming {0}
-roleAssignedError=The user group could not be deleted because there are still assigned steps.
+roleAssignedError=The role could not be deleted because there are still assigned tasks.
 rulesetInUse=The ruleset is still linked to processes and could not be deleted.
 rulesetNotFound=The specified ruleset could not be found.
 rulesetTitleDuplicated=The ruleset with the same title exists already.
