--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -176,7 +176,7 @@ confirmDeleteProject=Projekt l\u00F6schen?
 confirmDeleteRuleset=Regelsatz l\u00F6schen?
 confirmDeleteTemplate=Produktionsvorlage l\u00F6schen?
 confirmDeleteUser=Benutzer l\u00F6schen?
-confirmDeleteRole=Benutzergruppe l\u00F6schen?
+confirmDeleteRole=Rolle l\u00F6schen?
 confirmDeleteWorkflow=Workflow l\u00F6schen?
 confirmNewPassword=Neues Passwort best\u00E4tigen
 confirmRelease=Abgeben best\u00E4tigen
@@ -207,7 +207,7 @@ createNewLdapGroup=Neue LDAP-Gruppe anlegen
 createNewProcess=Einen neuen Vorgang anlegen
 createNewProcessFromTemplate=Einen neuen Vorgang auf Basis der Produktionsvorlage anlegen
 createNewRuleset=Neuen Regelsatz anlegen
-createNewRole=Neue Benutzergruppe anlegen
+createNewRole=Neue Rolle anlegen
 createNewWorkflow=Neuen Workflow anlegen
 createPdf=PDF erzeugen
 createXML=Export des Logfiles in das Home Verzeichnis
@@ -538,7 +538,7 @@ newProcess=Neuer Vorgang
 newWorkflow=Neuer Workflow
 newBatch=Neuer Batch
 newUser=Neuer Benutzer
-newRole=Neue Benutzergruppe
+newRole=Neue Rolle
 newLdapGroup=Neue LDAP-Gruppe
 ldapServerNew=Neuen LDAP-Server anlegen
 next=Weiter
@@ -638,7 +638,7 @@ removeFilter=Filter entfernen
 removeFromAssociatedBatch=Selektierte Vorg\u00E4nge von ihren zugewiesenen Batches entfernen
 removeFromBatch=Die Zuordnungs des Vorgangs zu Batch {0} wurde aufgehoben.
 removeUser=Benutzer entfernen
-removeRole=Benutzergruppe entfernen
+removeRole=Rolle entfernen
 renameBatch=Batch umbenennen
 requiredField=Mit * gekennzeichnete Felder sind Pflichtfelder
 resultPDF=Ergebnis-PDF
@@ -646,10 +646,10 @@ resultSet=Ergebnismenge
 rights=Rechte
 roman=r\u00F6misch
 role=Rolle
-roleEdit=Benutzergruppe bearbeiten
-roleView=Benutzergruppe anzeigen
-roles=Benutzergruppen
-rolesAdd=Benutzergruppen hinzuf\u00FCgen
+roleEdit=Rolle bearbeiten
+roleView=Rolle anzeigen
+roles=Rollen
+rolesAdd=Rollen hinzuf\u00FCgen
 ruleset=Regelsatz
 rulesetEdit=Regelsatz bearbeiten
 # rulesetSaving is used in rulesetEdit.xhtml - line 39
@@ -794,7 +794,7 @@ userView=Benutzer anzeigen
 userData=Benutzerdaten \u0026 Einstellungen
 userDN=User DN
 # roleSaving is used in roleEdit.xhtml - line 40
-roleSaving=Benutzergruppe wird gespeichert
+roleSaving=Rolle wird gespeichert
 userNotFound=Benutzer kann nicht ermittelt werden
 # userSaving is used in userEdit.xhtml - line 39
 userSaving=Benutzer wird gespeichert...
