--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -176,7 +176,7 @@ confirmDeleteProject=Delete project?
 confirmDeleteRuleset=Delete ruleset?
 confirmDeleteTemplate=Delete template?
 confirmDeleteUser=Delete user?
-confirmDeleteRole=Delete user group?
+confirmDeleteRole=Delete role?
 confirmDeleteWorkflow=Delete workflow?
 confirmNewPassword=Confirm new password
 confirmRelease=Confirm release
@@ -207,7 +207,7 @@ createNewLdapGroup=Create new LDAP group
 createNewProcess=Create new process
 createNewProcessFromTemplate=Create process from template
 createNewRuleset=Create new rule set
-createNewRole=Create new user group
+createNewRole=Create new role
 createNewWorkflow=Create new workflow
 createPdf=create pdf
 createXML=Export logfile as XML file to home directory
@@ -538,7 +538,7 @@ newProcess=New process
 newWorkflow=New workflow
 newBatch=New batch
 newUser=New user
-newRole=New user group
+newRole=New role
 newLdapGroup=New LDAP group
 newLdapServer=New LDAP server
 next=Next
@@ -637,7 +637,7 @@ removeFilter=Remove filter from list
 removeFromAssociatedBatch=remove selected processes from assigned batches
 removeFromBatch=Removed process from batch {0}.
 removeUser=Remove user
-removeRole=Remove user group
+removeRole=Remove role
 renameBatch=Rename batch
 requiredField=Fields marked with * are required
 resultPDF=Result PDF
@@ -793,7 +793,7 @@ userData=User data \u0026 settings
 userDN=User DN
 userView=View user
 # roleSaving is used in roleEdit.xhtml - line 40
-roleSaving=Saving user group
+roleSaving=Saving role
 userNotFound=User not found
 # userSaving is used in userEdit.xhtml - line 39
 userSaving=Saving user...
